@@ -17,10 +17,10 @@
 
 test_run(){
 
-    #cp -f ${APS_HOME}/devtests/security/ldap/opends/X500Signer.jar ${OPENDS_HOME}/lib
+    export OPENDJ_JAVA_ARGS="-Xmx1g -Xss512k --add-exports=java.base/sun.security.tools.keytool=ALL-UNNAMED --add-exports=java.base/sun.security.x509=ALL-UNNAMED"
 
     # Configure and start OpenDS using the default ports
-    ${OPENDS_HOME}/setup \
+    "${OPENDS_HOME}/setup" \
         -i \
         -v \
         -n \
@@ -32,22 +32,24 @@ test_run(){
         -Z 1636 \
         --useJavaKeystore ${S1AS_HOME}/domains/domain1/config/keystore.jks \
         -W changeit \
-        -N s1as
+        -N s1as \
+        --doNotStart
 
-    ${S1AS_HOME}/bin/asadmin start-database
-    ${S1AS_HOME}/bin/asadmin start-domain
-    cd ${APS_HOME}/devtests/security
+    "${OPENDS_HOME}/bin/start-ds"
+    "${S1AS_HOME}/bin/asadmin" start-database
+    "${S1AS_HOME}/bin/asadmin" start-domain
+    cd "${APS_HOME}/devtests/security"
 
-    ant ${TARGET} | tee ${TEST_RUN_LOG}
+    ant "${TARGET}" | tee "${TEST_RUN_LOG}"
 
-    ${S1AS_HOME}/bin/asadmin stop-domain
-    ${S1AS_HOME}/bin/asadmin stop-database
-        ${OPENDS_HOME}/bin/stop-ds \
+    "${S1AS_HOME}/bin/asadmin" stop-domain
+    "${S1AS_HOME}/bin/asadmin" stop-database
+    "${OPENDS_HOME}/bin/stop-ds" \
         -p 4444 \
         -D "cn=Directory Manager" \
         -w dmanager \
-        -P ${OPENDS_HOME}/config/admin-truststore \
-        -U ${OPENDS_HOME}/config/admin-keystore.pin
+        -P "${OPENDS_HOME}/config/admin-truststore" \
+        -U "${OPENDS_HOME}/config/admin-keystore.pin"
 
     #egrep 'FAILED= *0' ${TEST_RUN_LOG}
     #egrep 'DID NOT RUN= *0' ${TEST_RUN_LOG}
@@ -63,8 +65,8 @@ get_test_target(){
 }
 
 merge_result_files(){
-        cat ${APS_HOME}/test_resultsValid.xml ${APS_HOME}/security-gtest-results.xml > ${APS_HOME}/temp.xml
-        mv ${APS_HOME}/temp.xml ${APS_HOME}/test_resultsValid.xml
+        cat "${APS_HOME}/test_resultsValid.xml" "${APS_HOME}/security-gtest-results.xml" > "${APS_HOME}/temp.xml"
+        mv "${APS_HOME}/temp.xml" "${APS_HOME}/test_resultsValid.xml"
 }
 
 run_test_id(){
@@ -74,10 +76,11 @@ run_test_id(){
   if [ ! -f "${OPENDJ_ZIP}" ]; then
     curl -L -k https://github.com/OpenIdentityPlatform/OpenDJ/releases/download/4.4.11/opendj-4.4.11.zip > "${OPENDJ_ZIP}"
   fi
-  unzip -o ${OPENDJ_ZIP}
-  export OPENDS_HOME=${PWD}/opendj
+  export OPENDS_HOME="${WORKSPACE}/opendj"
+  rm -rf -d "${OPENDS_HOME}"
+  unzip -o "${OPENDJ_ZIP}" -d "${WORKSPACE}"
 
-  unzip_test_resources ${WORKSPACE}/bundles/glassfish.zip
+  unzip_test_resources "${WORKSPACE}/bundles/glassfish.zip"
   cd `dirname ${0}`
   test_init
   get_test_target ${1}
